--- a/package.json
+++ b/package.json
@@ -1,24 +1,76 @@
 {
-    "name": "wekruit-week4-backend",
+    "name": "cloud-functions",
     "version": "1.0.0",
-    "description": "Week 4 Backend - Firebase Cloud Functions",
-    "main": "index.js",
-    "engines": {
-        "node": "20"
-    },
+    "main": "lib/index.js",
     "scripts": {
-        "serve": "firebase emulators:start --only functions",
+        "lint": "eslint --ext .js,.ts .",
+        "build": "tsc",
+        "build:watch": "tsc --watch",
+        "serve": "npm run build && firebase emulators:start --only functions",
+        "shell": "npm run build && firebase functions:shell",
+        "start": "npm run shell",
         "deploy": "firebase deploy --only functions",
         "logs": "firebase functions:log"
     },
+    "_moduleAliases": {
+        "@": "lib"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "engines": {
+        "node": "20"
+    },
     "dependencies": {
-        "firebase-admin": "^12.0.0",
-        "firebase-functions": "^4.5.0"
+        "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@google-cloud/pubsub": "^4.11.0",
+        "@google-cloud/storage": "^7.15.2",
+        "@google-cloud/tasks": "^6.1.0",
+        "@livekit/egress-sdk": "^0.2.1",
+        "@livekit/protocol": "^1.36.1",
+        "@types/busboy": "^1.5.4",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/fluent-ffmpeg": "^2.1.27",
+        "axios": "^1.9.0",
+        "bcrypt": "^5.1.1",
+        "busboy": "^1.6.0",
+        "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
+        "date-fns-tz": "^3.2.0",
+        "dotenv": "^16.4.5",
+        "express": "^5.1.0",
+        "firebase-admin": "^12.7.0",
+        "firebase-functions": "^6.3.2",
+        "fluent-ffmpeg": "^2.1.3",
+        "form-data": "^4.0.2",
+        "googleapis": "^144.0.0",
+        "livekit-server-sdk": "^2.12.0",
+        "mailgun.js": "^12.0.1",
+        "module-alias": "^2.2.3",
+        "retell-sdk": "^4.32.0",
+        "ws": "^8.18.0",
+        "xml2js": "^0.6.2",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
-        "eslint": "^8.15.0",
-        "firebase-functions-test": "^3.1.0"
+        "@types/duplexify": "^3.6.4",
+        "@types/glob": "^8.1.0",
+        "@types/linkify-it": "^5.0.0",
+        "@types/markdown-it": "^14.1.2",
+        "@types/mdurl": "^2.0.0",
+        "@types/minimatch": "^5.1.2",
+        "@types/rimraf": "^4.0.5",
+        "@types/triple-beam": "^1.3.5",
+        "@typescript-eslint/eslint-plugin": "^5.12.0",
+        "@typescript-eslint/parser": "^5.12.0",
+        "eslint": "^8.57.1",
+        "eslint-config-google": "^0.14.0",
+        "eslint-plugin-import": "^2.25.4",
+        "typescript": "^4.9.0"
     },
-    "private": true
+    "optionalDependencies": {
+        "bufferutil": "^4.0.8"
+    }
 }
-
